--- a/Components/Layout/NavMenu.razor
+++ b/Components/Layout/NavMenu.razor
@@ -26,7 +26,7 @@
             </NavLink>
         </div>
 
-        <div class="nav-item px-3">
+        @* <div class="nav-item px-3">
             <NavLink class="nav-link" href="books">
                 <span class="bi bi-book" aria-hidden="true"></span> Books
             </NavLink>
@@ -45,7 +45,7 @@
             <NavLink class="nav-link" href="publishers">
                 <span class="bi bi-building" aria-hidden="true"></span> Publishers
             </NavLink>
-        </div>
+        </div> *@
         
     </nav>
 </div>
