--- a/Pages/_Host.cshtml
+++ b/Pages/_Host.cshtml
@@ -1,17 +1,19 @@
-@* @page "/"
+@page "/"
 @namespace LibraryPortalBlazorWebApp.Pages
-@using LibraryPortalBlazorWebApp  <!-- This must match App.razor namespace -->
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@{
+    Layout = null;
+}
 
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Library Portal Blazor</title>
     <base href="~/" />
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
-    <link href="css/site.css" rel="stylesheet" />
+    <link href="css/app.css" rel="stylesheet" />
+    <link href="LibraryPortalBlazorWebApp.styles.css" rel="stylesheet" />
 </head>
 <body>
     <app>
@@ -20,4 +22,4 @@
 
     <script src="_framework/blazor.server.js"></script>
 </body>
-</html> *@
+</html>
