--- a/Pages/Counter.razor
+++ b/Pages/Counter.razor
@@ -1,19 +1,12 @@
 ﻿@page "/counter"
-@rendermode InteractiveServer
 
-<PageTitle>Counter</PageTitle>
+<h3>Counter</h3>
 
-<h1>Counter</h1>
-
-<p role="status">Current count: @currentCount</p>
+<p>Current count: @currentCount</p>
 
 <button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
 
 @code {
     private int currentCount = 0;
-
-    private void IncrementCount()
-    {
-        currentCount++;
-    }
+    private void IncrementCount() => currentCount++;
 }
