--- a/_Imports.razor
+++ b/_Imports.razor
@@ -8,3 +8,6 @@
 @using Microsoft.JSInterop
 @using LibraryPortalBlazorWebApp
 @using LibraryPortalBlazorWebApp.Components
+@using Microsoft.AspNetCore.Components
+@using LibraryPortalBlazorWebApp.Components.Layout
+
