--- a/Components/Layout/NavMenu.razor
+++ b/Components/Layout/NavMenu.razor
@@ -1,6 +1,6 @@
 ﻿<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">LibraryPortalBlazorWebApp</a>
+        <a class="navbar-brand" href="">Library Portal</a>
     </div>
 </div>
 
@@ -13,20 +13,7 @@
                 <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
             </NavLink>
         </div>
-
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter
-            </NavLink>
-        </div>
-
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="weather">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
-            </NavLink>
-        </div>
-
-         <div class="nav-item px-3">
             <NavLink class="nav-link" href="books">
                 <span class="bi bi-book" aria-hidden="true"></span> Books
             </NavLink>
@@ -45,7 +32,11 @@
             <NavLink class="nav-link" href="publishers">
                 <span class="bi bi-building" aria-hidden="true"></span> Publishers
             </NavLink>
-        </div> 
-        
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="counter">
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter
+            </NavLink>
+        </div>
     </nav>
 </div>
