--- a/Pages/Publishers/PublisherList.razor
+++ b/Pages/Publishers/PublisherList.razor
@@ -54,6 +54,10 @@ else
 <!-- Add/Edit Modal -->
 @if (isModalVisible)
 {
+  <EditForm Model="currentPublisher" OnValidSubmit="Save">
+    <DataAnnotationsValidator />
+    <ValidationSummary />
+
     <div class="modal fade show d-block" tabindex="-1" style="background-color: rgba(0,0,0,0.5);">
         <div class="modal-dialog">
             <div class="modal-content">
@@ -64,32 +68,38 @@ else
                 <div class="modal-body">
                     <div class="mb-2">
                         <label>Name</label>
-                        <input class="form-control" @bind="currentPublisher.publisher_name" />
+                        <InputText class="form-control" @bind-Value="currentPublisher.publisher_name" />
+                        <ValidationMessage For="@(() => currentPublisher.publisher_name)" />
                     </div>
                     <div class="mb-2">
                         <label>Address</label>
-                        <input class="form-control" @bind="currentPublisher.address" />
+                        <InputText class="form-control" @bind-Value="currentPublisher.address" />
+                        <ValidationMessage For="@(() => currentPublisher.address)" />
                     </div>
                     <div class="mb-2">
                         <label>Phone</label>
-                        <input class="form-control" @bind="currentPublisher.phone" />
+                        <InputText class="form-control" @bind-Value="currentPublisher.phone" />
+                        <ValidationMessage For="@(() => currentPublisher.phone)" />
                     </div>
                     <div class="mb-2">
                         <label>Email</label>
-                        <input class="form-control" @bind="currentPublisher.email" />
+                        <InputText class="form-control" @bind-Value="currentPublisher.email" />
+                        <ValidationMessage For="@(() => currentPublisher.email)" />
                     </div>
                     <div class="form-check mb-2">
-                        <input class="form-check-input" type="checkbox" @bind="currentPublisher.active" />
+                        <InputCheckbox class="form-check-input" @bind-Value="currentPublisher.active" />
                         <label class="form-check-label">Active</label>
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <button class="btn btn-secondary" @onclick="CloseModal">Cancel</button>
-                    <button class="btn btn-primary" @onclick="Save">Save</button>
+                    <button type="button" class="btn btn-secondary" @onclick="CloseModal">Cancel</button>
+                    <button type="submit" class="btn btn-primary">Save</button>
                 </div>
             </div>
         </div>
     </div>
+</EditForm>
+
 }
 
 <!-- Delete Confirmation Modal -->
