--- a/Pages/Authors/AuthorList.razor
+++ b/Pages/Authors/AuthorList.razor
@@ -1,7 +1,10 @@
 @page "/authors"
 @using LibraryPortalBlazorWebApp.Components.Models
 @using LibraryPortalBlazorWebApp.Components.Services
+@using LibraryPortalBlazorWebApp.Models
+@using LibraryPortalBlazorWebApp.Services
 @inject AuthorService AuthorService
+@inject DropdownService DropdownService
 
 <h3>Authors</h3>
 
@@ -77,7 +80,13 @@ else
 
                         <div class="mb-2">
                             <label>Country</label>
-                            <InputText class="form-control" @bind-Value="currentAuthor.country" />
+                            <InputSelect class="form-control" @bind-Value="currentAuthor.country">
+    <option value="">-- Select Country --</option>
+    @foreach (var country in countries)
+    {
+        <option value="@country.Value">@country.Text</option>
+    }
+</InputSelect>
                             <ValidationMessage For="@(() => currentAuthor.country)" />
                         </div>
 
@@ -146,9 +155,12 @@ else
     private bool isDeleteModalVisible;
     private int deleteAuthorId;
 
+  private List<DropdownItem> countries = new();
+
     protected override async Task OnInitializedAsync()
     {
         authors = (await AuthorService.GetAuthorsAsync()).ToList();
+         countries = await DropdownService.GetCountriesAsync();
     }
 
     private void OpenAddModal()
@@ -156,6 +168,7 @@ else
         currentAuthor = new Author();
         modalTitle = "Add New Author";
         isModalVisible = true;
+       
     }
 
     private void OpenEditModal(Author author)
