--- a/Pages/Books/BookList.razor
+++ b/Pages/Books/BookList.razor
@@ -59,64 +59,79 @@ else
 <!-- Add/Edit Modal -->
 @if (isModalVisible)
 {
-    <div class="modal fade show d-block" tabindex="-1" style="background-color: rgba(0,0,0,0.5);">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title">@modalTitle</h5>
-                    <button type="button" class="btn-close" @onclick="CloseModal"></button>
-                </div>
-                <div class="modal-body">
-                    <div class="mb-2">
-                        <label>Title</label>
-                        <input class="form-control" @bind="currentBook.title" />
+    <EditForm Model="currentBook" OnValidSubmit="Save">
+        <DataAnnotationsValidator />
+        <ValidationSummary />
+
+        <div class="modal fade show d-block" tabindex="-1" style="background-color: rgba(0,0,0,0.5);">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title">@modalTitle</h5>
+                        <button type="button" class="btn-close" @onclick="CloseModal"></button>
                     </div>
-                    <div class="mb-2">
-                        <label>Author</label>
-                        <InputSelect class="form-control" @bind-Value="currentBook.author_id">
-                            <option value="">-- Select Author --</option>
-                            @foreach (var author in authors)
-                            {
-                                <option value="@author.Value">@author.Text</option>
-                            }
-                        </InputSelect>
+                    <div class="modal-body">
+                        <div class="mb-2">
+                            <label>Title</label>                            
+                            <InputText class="form-control" @bind-Value="currentBook.title" />                           
+                            <ValidationMessage For="@(() => currentBook.title)" />
+                        </div>
+                        <div class="mb-2">
+                            <label>Description</label>
+                            <InputTextArea class="form-control" @bind-Value="currentBook.description" />
+                            <ValidationMessage For="@(() => currentBook.description)" />
+                        </div>
+                        <div class="mb-2">
+                            <label>Author</label>
+                            <InputSelect class="form-control" @bind-Value="currentBook.author_id">
+                                <option value="">-- Select Author --</option>
+                                @foreach (var author in authors)
+                                {
+                                    <option value="@author.Value">@author.Text</option>
+                                }
+                            </InputSelect>
+                            <ValidationMessage For="@(() => currentBook.author_id)" />
+                        </div>
+                        <div class="mb-2">
+                            <label>Publisher</label>
+                            <InputSelect class="form-control" @bind-Value="currentBook.publisher_id">
+                                <option value="">-- Select Publisher --</option>
+                                @foreach (var publisher in publishers)
+                                {
+                                    <option value="@publisher.Value">@publisher.Text</option>
+                                }
+                            </InputSelect>
+                            <ValidationMessage For="@(() => currentBook.publisher_id)" />
+                        </div>
+                        <div class="mb-2">
+                            <label>Category</label>
+                            <InputSelect class="form-control" @bind-Value="currentBook.category_id">
+                                <option value="">-- Select Category --</option>
+                                @foreach (var category in categories)
+                                {
+                                    <option value="@category.Value">@category.Text</option>
+                                }
+                            </InputSelect>
+                            <ValidationMessage For="@(() => currentBook.category_id)" />
+                        </div>
+                        <div class="mb-2">
+                            <label>Price</label>
+                            <InputNumber class="form-control" @bind-Value="currentBook.price" />
+                            <ValidationMessage For="@(() => currentBook.price)" />
+                        </div>
+                        <div class="form-check mb-2">
+                            <InputCheckbox class="form-check-input" @bind-Value="currentBook.active" />
+                            <label class="form-check-label">Active</label>
+                        </div>
                     </div>
-                    <div class="mb-2">
-                        <label>Publisher</label>
-                        <InputSelect class="form-control" @bind-Value="currentBook.publisher_id">
-                            <option value="">-- Select Publisher --</option>
-                            @foreach (var publisher in publishers)
-                            {
-                                <option value="@publisher.Value">@publisher.Text</option>
-                            }
-                        </InputSelect>
+                    <div class="modal-footer">
+                        <button class="btn btn-secondary" @onclick="CloseModal">Cancel</button>
+                        <button class="btn btn-primary" @onclick="Save">Save</button>
                     </div>
-                    <div class="mb-2">
-                        <label>Category</label>
-                        <InputSelect class="form-control" @bind-Value="currentBook.category_id">
-                            <option value="">-- Select Category --</option>
-                            @foreach (var category in categories)
-                            {
-                                <option value="@category.Value">@category.Text</option>
-                            }
-                        </InputSelect>
-                    </div>
-                    <div class="mb-2">
-                        <label>Price</label>
-                        <input class="form-control" type="number" step="0.01" @bind="currentBook.price" />
-                    </div>
-                    <div class="form-check mb-2">
-                        <input class="form-check-input" type="checkbox" @bind="currentBook.active" />
-                        <label class="form-check-label">Active</label>
-                    </div>
-                </div>
-                <div class="modal-footer">
-                    <button class="btn btn-secondary" @onclick="CloseModal">Cancel</button>
-                    <button class="btn btn-primary" @onclick="Save">Save</button>
                 </div>
             </div>
         </div>
-    </div>
+    </EditForm>
 }
 
 <!-- Delete Confirmation Modal -->
@@ -170,21 +185,28 @@ else
 
     private void OpenEditModal(BookRead book)
     {
-        @* currentBook = new Book
+        currentBook = new Book
         {
             book_id = book.BookId,
             title = book.Title,
-            author_name = book.AuthorName,
-            publisher_name = book.PublisherName,
-            category_name = book.CategoryName,
+            description = book.Description,
+            publisher_id = book.PublisherId,
+            category_id = book.CategoryId,            
+            author_id = book.AuthorId,
             price = book.Price,
             active = book.Active
-        }; *@
+        };
         modalTitle = "Edit Book";
         isModalVisible = true;
     }
 
-    private void CloseModal() => isModalVisible = false;
+     private void CloseModal()
+    {
+        currentBook = new Book();
+        StateHasChanged();
+        isModalVisible = false;
+    }
+
 
     private async Task Save()
     {
